<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
    tools:context=".MainActivity">

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/crear"
        android:id="@+id/button4"
        android:textSize="30sp"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:onClick="lanzarCrear"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:id="@+id/button"
        android:textSize="30sp"
        android:clickable="true"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="lanzarBuscar" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/modificar"
        android:id="@+id/button1"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:onClick="lanzarModificar" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/reparar"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:clickable="true"
        android:onClick="lanzarReparar" />
    
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:id="@+id/button3"
        android:textSize="30sp"
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:onClick="lanzarEliminar" />

</RelativeLayout>
