<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:padding="40dp"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Acceso a INVENTARIO"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:ems="10"
        android:id="@+id/usuario"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:inputType="number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/contrasena"
        android:textAlignment="center"
        android:ems="10"
        android:id="@+id/contrasena"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <Button
        android:text="@string/login"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="40dip"
        android:gravity="center"
        android:textSize="20dip" />


</LinearLayout>